<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/registro_layout"
    tools:context="androidmapsdefinitivo.android.bajaintec.com.androidmapsdefinitivo.RegistroContactoActivity"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacto"
        android:textColor="#000000"
        android:textSize="65px"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="45px"
        android:text="@string/seleccion_contacto"
        android:id="@+id/textView2"
        android:layout_marginBottom="10dp"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="386dp"
        android:id="@+id/lista_contactos"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnGuardarV"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:background="#ffffff"
            android:text="@string/guardarbtn"
            android:textColor="#4d4d4d" />
    </LinearLayout>

</LinearLayout>
