<?xml version="1.0" encoding="utf-8"?>
<!--Copyright(C) <2016> <BajaInTec>
This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="androidmapsdefinitivo.android.bajaintec.com.androidmapsdefinitivo.IngresoActivity">
    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:id="@+id/logo"
        android:src="@drawable/logoapp"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="7dp"
            android:src="@drawable/iconopersona" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/etUser"
            android:inputType="textCapSentences|textAutoCorrect"
            android:hint="@string/usuario_edit_text" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="7dp"
            android:src="@drawable/iconocontrasena" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:id="@+id/etPass"
            android:hint="@string/contrasena_usuario" />
    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="180dp"
        android:layout_height="36dp"
        android:text="@string/iniciar_sesion"
        android:id="@+id/btnIniciarSesion"
        android:background="#e74d3d"
        android:textColor="#ffffff"
        android:layout_gravity="center"/>
</LinearLayout>
