<?xml version="1.0" encoding="utf-8"?>
<!--Copyright(C) <2016> <BajaInTec>
This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistroOcupacionActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:src="@drawable/iconomenu3"
        android:baselineAlignBottom="false" />

    <TextView
        android:id="@+id/txtV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ocupacion"
        android:textColor="#000000"
        android:textSize="65px"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txtV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"
        android:id="@+id/radioGroup"
        android:layout_marginBottom="40dp">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Trabajador"
            android:id="@+id/rButtonT"
            android:checked="false" android:textSize="40px"
            android:paddingBottom="18px"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Independiente/Profesionista"
            android:id="@+id/rButtonIP"
            android:checked="false" android:textSize="40px"
            android:paddingBottom="18px"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Estudiante"
            android:id="@+id/rButtonE"
            android:checked="false" android:textSize="40px"
            android:paddingBottom="18px" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sin ocupacion"
            android:id="@+id/rButtonSO"
            android:checked="false" android:textSize="40px"
            android:paddingBottom="18px" />
    </RadioGroup>

    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/continuar_btn"
        android:id="@+id/continuar_ocupacion_btn"
        android:layout_gravity="bottom|right"
        android:textColor="#4d4d4d"
        android:background="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/instruccion_ocupacion"
        android:id="@+id/textView3"
        android:textSize="45px"
        android:layout_below="@+id/txtV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
